<resources>
    <string name="app_name">Topic Preference</string>
    <string name="action_settings">Settings</string>


<!--this is for bass-->
    <string name="pref_show_bass_label">Show Bass</string>
    <string name="pref_show_bass_key" translatable="false">show_bass</string>
    <!-- Value in SharedPreferences for blue color option -->

    <!--this is for middle-->
    <string name="pref_show_mid_label">Show Mid</string>
    <string name="pref_show_mid_key" translatable="false">show_mid</string>

    <!--this is for treble-->
    <string name="pref_show_treble_label">Show Treble</string>
    <string name="pref_show_treble_key" translatable="false">show_treble</string>

    <string name="pref_show_true">Shown</string>
    <string name="pref_show_false">Hidden</string>


    <!-- Value in SharedPreferences for green color option -->
    <string name="pref_color_red_value" translatable="false">red</string>

    <string name="pref_color_green_value" translatable="false">green</string>

    <string name="pref_color_blue_value" translatable="false">blue</string>


</resources>
