<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <CheckBoxPreference
        android:defaultValue="@bool/pref_show_bass_default"
        android:key="@string/pref_show_bass_key"
        android:summaryOff="@string/pref_show_true"
        android:summaryOn="@string/pref_show_false"
        android:title="@string/pref_show_bass_label"
        />
    <CheckBoxPreference
        android:defaultValue="@bool/pref_show_mid_default"
        android:key="@string/pref_show_mid_key"
        android:summaryOff="@string/pref_show_true"
        android:summaryOn="@string/pref_show_false"
        android:title="@string/pref_show_mid_label"
        />
    <CheckBoxPreference
        android:defaultValue="@bool/pref_show_treble_default"
        android:key="@string/pref_show_treble_key"
        android:summaryOff="@string/pref_show_true"
        android:summaryOn="@string/pref_show_false"
        app:title="@string/pref_show_treble_label"/>
</PreferenceScreen>